# GazeTracker

./: CMakeLists.txt
src/: Matrix.cpp  Matrix.h  SVD.cpp  SVD.h  Vector.h  controlwidget.cpp  controlwidget.h  dialog.cpp  dialog.h  gazetracker.h  keyboardwidget.cpp  keyboardwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
